--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
 	"clean": "rimraf dist",
-    "build": "npm run clean && tspc -p tsconfig.json && cp-cli ./src/plugins/ ./dist/src/plugins/",
+    "build": "npm run clean && tspc -p tsconfig.json && cpy ./src/plugins/ ./dist/src/plugins/",
     "start": "node -r dotenv/config dist/src/app.js | pino-pretty --colorize",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -21,7 +21,7 @@
     "@types/node": "^20.11.25",
 	"@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
-	"cp-cli": "^2.0.0",
+	"cpy-cli": "^5.0.0",
     "pino-pretty": "^10.3.1",
 	"prettier": "^3.1.1",
     "rimraf": "^5.0.5",
